test/regress/cov3-annotate-missing-close-bracket.test
; Test error for missing closing bracket in annotation
; Covers annotate.cc lines 153-154 (missing closing bracket)

2024/01/01 Test
    Assets:Brokerage    10 AAPL [2024/01/01
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Brokerage    10 AAPL [2024/01/01
                      ^^^^^^^^^^^^^^^^^^^
Error: Commodity date lacks closing bracket
end test
